css/templatestyles.css
/* ... */
button:focus{outline:none}
.nav,button{outline:0}

/*here*/
img{vertical-align:middle;border-style:none;width:100%;height:auto}

hr{border:1.5px solid #bc5a15;margin:5px 30px -5px 30px}

.btn{text-decoration:none;background:#BC5A15;color:#fff;display:inline-block;padding:8px 16px;border:0;border-radius:.3rem;cursor:pointer}
.btn:hover,.btn:active,.btn:focus{background:#e57930}

.btn-outlined{background:#fff;color:green;border:3px solid green;font-weight:bold;border-radius:7px;}
.btn.btn-outlined:hover,.btn.btn-outlined:active{background:#ffffff;color:#006100;border-color:#006100}

#fixedbar{background:#BC5A15;color:#fff;position:fixed;top:0;width:100%;height:30px;z-index:3;font-size:13px;font-weight:bold;padding:7px 0 0 30px;padding-left:calc(10vw / 3)}

#phone-icon,#email-icon{width:10px;height:auto;display:inline-block;margin-right:3px}
.fixedbar-icons{display:inline-block;margin-right:3px}

#phone-link{color:#fff;text-decoration:none!important}

#nav-wrap{float:none;padding:0;position:relative;}.nav{background:#2f3f5e;position:fixed;width:100%;height:calc(56vw / 3);z-index:3;color:#fff;top:30px;border-bottom:2px solid #212f4a;overflow:hidden;}
.nav-link{text-decoration:none;padding:8px 14px 8px 8px;position:relative;color:inherit;font-weight:600}
.nav-link.selected{color:#fff;text-shadow:1px 1px 0 #bc5a15,-1px 1px 0 #bc5a15,-1px -1px 0 #bc5a15,1px -1px 0 #bc5a15;}
#nav-brand{display:inline-block;max-width:calc(100vw - 62px);padding:3px 12px 0 0;padding-left:calc(10vw / 3);}
.nav a{display:block;padding:8px 15px}
.dropbtn{background-color:#303f5e;color:white;font-size:16px;border:none;cursor:pointer;}
.dropbtn:hover,.dropbtn:focus{background-color:#303f5e;}#dropbtn-arrow{font-size:10px}
.dropdown{position:relative;display:inline-block;padding:8px 15px;}
.dropdown-content{display:none;background-color:#303f5e;min-width:254px;margin-left:15px;z-index:1;left:0;position:relative;}
.dropdown-content a{color:#fff;padding:12px 16px;text-decoration:none;display:block;}
.dropdown-content a:hover{background-color:#222f49;}
.show{display:block;}
.bar1,.bar2,.bar3{width:30px;height:3.25px;background-color:#f1f1f1;margin:6.5px 0;transition:.4s}
.change .bar1{-webkit-transform:rotate(-45deg) translate(-9px,6px);transform:rotate(-45deg) translate(-9px,6px)}
.change .bar2{opacity:0}
.change .bar3{-webkit-transform:rotate(45deg) translate(-8px,-4px);transform:rotate(45deg) translate(-8px,-4px)}
.navbar-toggler{float:right;margin:0 15px 0 0;position:relative;}
.navbar-change{height:auto}
#dropbtn-arrow{border:solid #ffffff;box-shadow:#000 1px 1px 1px;border-width:0 3px 3px 0;display:inline-block;padding:3px;transform:rotate(45deg);-webkit-transform:rotate(45deg);}


.big-image{
  background-color:#2f3f5e;
  margin-top:calc((56vw / 3) + 30px);
  /* height:calc(100vh - ((56vw / 3) + 30px)); */
  width:100%;
  position:relative;
  background-size:cover;
  background-position:50% 50%;
  height: 75vh;
}
.big-image.foundation{background-image:url(../images/566/foundation.webp);}

.overlay{position:relative;left:50%;background:rgba(48,63,94,.41);color:white;width:90%;text-align:center;top:50%;transform:translate(-50%,calc(-50% - 30px));padding:12px}
#hero-h1{text-align:left;font-size:35px;text-shadow:2px 2px 4px #000;line-height:39px;}
#hero-hr{margin:17px 3px;}
#hero-p{padding:0;font-size:18px;font-weight:bold;text-shadow:2px 2px 4px #000;text-align:left;}
#hero-btn{font-size:18px;font-weight:600;padding:12px 32px;border:1px solid #ab4400;text-shadow:1px 1px 4px #5e2500;margin:20px 0 0 0;}
/* ... */

